Details
-
Bug
-
Status: Closed
-
Trivial
-
Resolution: Fixed
-
None
-
Patch Available
-
Patch
Description
Thrift uses TLS SNI extension during SSL handshake provided by OpenSSL library. Older version of OpenSSL(< 0.9.8f) may create problem because they do not support 'SSL_set_tlsext_host_name()'.
I have created a pull request regarding this issue[1], this issue is although negligible because all newer version of OpenSSL supports TLS SNI extension but checking if TLS SNI extension is supported in user's OpenSSL version is not bad.
Attachments
Issue Links
- links to