THRIFT-3892 support OpenSSL before 0.9.8f during build Client: C++ Patch: Udit Raikwar <udit043@users.noreply.github.com>

This closes #1057